# Notley

./: .gitignore  pyproject.toml
src/: app.py  cli.py  db.py  models.py  services.py
tests/: test_services_actions.py  test_services_create.py  test_services_list_edit.py  test_smoke.py
