[project]
name = "notely"
version = "0.1.0"
description = "A tiny, testable note-taking CLI with SQLite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer[all]",
  "sqlmodel>=0.0.21",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
line-length = 100


[project.scripts]
notely = "src.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
